--- a/ServerTest/WebContent/css/question.css
+++ b/ServerTest/WebContent/css/question.css
@@ -329,7 +329,6 @@ button{
 	text-overflow:ellipsis;
 	overflow:hidden;
 	white-space:nowrap;
-	
 }
 .question ul li span{
 	color: black;
@@ -366,7 +365,7 @@ button{
 	white-space:nowrap;
 }
 .quesContent ul li:nth-child(7){
-	width: 500px;
+	width: 73px;
 	height: 35px;
 	float:left;
 	cursor: pointer;
@@ -415,7 +414,7 @@ button{
 	white-space:nowrap;
 }
 .quesContent_2 ul li:nth-child(7){
-	width: 500px;
+	width: 73px;
 	height: 35px;
 	float:left;
 	cursor: pointer;
@@ -472,6 +471,12 @@ button{
 .quesContent_3 ul li:nth-child(7) img{
 	margin-bottom: 7px;
   		margin-right: 5px;
+}
+.quesContent_3 ul li:nth-child(8){
+	width: 73px;
+	height: 35px;
+	float:left;
+	cursor: pointer;
 }
 .quesContent_3 ul li:nth-child(1) a{
     width: 1000px;
